syntax = "proto3";
package comments_service;

import "google/protobuf/timestamp.proto";

message GameComment {
  string comment_id = 1;
  string game_id = 2;
  string user_id = 3;
  string username = 4;
  uint32 event_number = 5;
  string comment = 6;
  google.protobuf.Timestamp last_edited = 7;
  // game_meta is for optional display of game metadata.
  map<string, string> game_meta = 8;
}

message AddCommentRequest {
  string game_id = 1;
  uint32 event_number = 2;
  string comment = 3;
}

message AddCommentResponse { string comment_id = 1; }

message GetCommentsRequest { string game_id = 1; }

message GetCommentsResponse { repeated GameComment comments = 1; }

message EditCommentRequest {
  string comment_id = 1;
  string comment = 2;
}

message EditCommentResponse {}

message DeleteCommentRequest { string comment_id = 1; }
message DeleteCommentResponse {}

message GetCommentsAllGamesRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message GetCollectionCommentsRequest {
  string collection_uuid = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}

service GameCommentService {
  rpc AddGameComment(AddCommentRequest) returns (AddCommentResponse);
  rpc GetGameComments(GetCommentsRequest) returns (GetCommentsResponse);
  rpc EditGameComment(EditCommentRequest) returns (EditCommentResponse);
  rpc DeleteGameComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc GetCommentsForAllGames(GetCommentsAllGamesRequest)
      returns (GetCommentsResponse);
  rpc GetCollectionComments(GetCollectionCommentsRequest)
      returns (GetCommentsResponse);
}